Fixed ShellUtil bugs